--- a/coolshot/coolshot.entitlements
+++ b/coolshot/coolshot.entitlements
@@ -6,5 +6,9 @@
     <true/>
     <key>com.apple.security.files.user-selected.read-only</key>
     <true/>
+    <key>com.apple.security.temporary-exception.mach-register.global-name</key>
+    <string>com.apple.screencapture.interactive</string>
+    <key>com.apple.security.files.user-selected.read-write</key>
+    <true/>
 </dict>
 </plist>
