fix archive validation

--- a/rapidsnap/Info.plist
+++ b/rapidsnap/Info.plist
@@ -16,5 +16,7 @@
 		</dict>
 		<dict/>
 	</array>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.productivity</string>
 </dict>
 </plist>
